// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General scenario tests Async tests Should match snapshot 1`] = `
Object {
  "done": [Function],
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "molestias-veritatis-deserunt",
  "testCount": 2,
  "tests": Object {
    "doloribus-enim-quisquam": Object {
      "errorCount": 0,
      "testCount": 2,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`General scenario tests Base case Should match snapshot 1`] = `
Object {
  "done": [Function],
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "eveniet-maxime-ea",
  "testCount": 2,
  "tests": Object {
    "non-rem-dolorem": Object {
      "errorCount": 0,
      "testCount": 1,
      "warnCount": 0,
    },
    "sed-minima-adipisci": Object {
      "errorCount": 1,
      "errors": Array [
        "Aliquam reprehenderit iure omnis assumenda eligendi enim id praesentium numquam.",
      ],
      "testCount": 1,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`General scenario tests Exclusion via \`only\` Should match snapshot 1`] = `
Object {
  "done": [Function],
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "inventore-quis-impedit",
  "testCount": 1,
  "tests": Object {
    "doloribus-enim-quisquam": Object {
      "errorCount": 0,
      "testCount": 1,
      "warnCount": 0,
    },
  },
  "warnCount": 0,
}
`;

exports[`General scenario tests Exclusion via \`skip\` Should match snapshot 1`] = `
Object {
  "done": [Function],
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "corrupti-alias-autem",
  "testCount": 1,
  "tests": Object {
    "autem": Object {
      "errorCount": 0,
      "testCount": 1,
      "warnCount": 1,
      "warnings": Array [
        "Temporibus ex ex.",
      ],
    },
  },
  "warnCount": 1,
}
`;

exports[`General scenario tests Tests with warnings Should match snapshot 1`] = `
Object {
  "done": [Function],
  "errorCount": 0,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "name": "corrupti-alias-autem",
  "testCount": 2,
  "tests": Object {
    "autem": Object {
      "errorCount": 0,
      "testCount": 2,
      "warnCount": 1,
      "warnings": Array [
        "Temporibus ex ex.",
      ],
    },
  },
  "warnCount": 1,
}
`;

exports[`Vest exports All vest exports exist 1`] = `
Object {
  "VERSION": Any<String>,
  "create": [Function],
  "draft": [Function],
  "enforce": [Function],
  "group": [Function],
  "only": [Function],
  "skip": [Function],
  "test": [Function],
  "warn": [Function],
}
`;
